# cognizantaimlapr2026

./: README.md
day2/: pyproject.toml
day2/day2env/: pyvenv.cfg
day2/docs/source/: app.rst  conf.py  index.rst
day2/ecommerce.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day2/src/: app.py  start.py
day2/src/models/: customer.py
day2/src/store/: customerstore.py
day2/src/view/: customerview.py
day5/src/Banking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day5/src/configurations/: configuration.py
day5/src/dataloaders/: customer_csv_dataloader.py  customer_data_loader.py
day5/src/exceptions/: customer_not_found.py
day5/src/models/: address.py  company_type.py  corporate.py  customer.py  full_name.py  gender.py  indivdual.py
day5/src/resources/: customers.csv  customers.json  customers.txt
day5/src/stores/: customer_store.py  customer_store_impl.py
day5/src/utils/: app.py
day6/src/configurations/: conf.py
day6/src/utils/: clock.py  main.py
